--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -87,9 +87,9 @@
         {%- endunless -%}
       </div>
     </div>
-    {%- if section.settings.title_sub_text -%}
-      {{section.settings.title_sub_text}}
-      {%- endif-%}
+    <div class="product-summary-wrapper">
+      {{ product.metafields.custom.product_summary }}
+    </div>
     {%- if section.settings.show_taxes_included -%}
       {%- if cart.taxes_included or shop.shipping_policy.body != blank -%}
         <p class="product-meta__taxes-included text--small">
