--- a/assets/theme.css
+++ b/assets/theme.css
@@ -17832,6 +17832,9 @@ article-list > div > div > h3 > a {
   display: inline-block;
   font-weight: bold;
 }
+.size-chart-wrapper .size-chart-title:hover{
+  cursor: pointer;
+}
 .size-chart-wrapper .size-chart-content{
   margin-top: 0;
 }
@@ -17883,10 +17886,471 @@ article-list > div > div > h3 > a {
 .tab-content-wrapper.active{
   /* display:none; */
 }
+.tab-content-wrapper *{
+    word-break: break-all;
+}
 
 .image-with-text__text-wrapper{
-  text-align: left;
+  text-align: center;
 }
 .image-with-text__text-wrapper .heading, .image-with-text__text-wrapper .button-wrapper{
   text-align: center;
+}
+
+
+
+
+/* for comment */
+.product-page-class .mini-cart__recommendations-list .product-info-buttons-wrapper{
+  display: none;
+}
+.product-page-class .button-capsule.active .button-circle-filled{
+  display: none;
+}
+.product-page-class .button-capsule .button-circle-filled{
+  display: inline;
+  margin-right: 7.5px;
+  width: 40px!important;
+  height: 40px!important;
+}
+.product-page-class .button-capsule .add-to-capsule-heart{
+  display: none;
+}
+.product-page-class .button-capsule.active .add-to-capsule-heart{
+  display: inline;
+}
+.product-page-class .button-capsule:hover .button-circle-filled{
+  background-color: white;
+}
+
+
+
+/* modal style */
+.modal-wrapper{
+  display: none;
+  position: fixed;
+  left: 0;
+  right:0;
+  top:0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 99;
+}
+.modal-wrapper.active{
+  display: block;
+}
+.modal-wrapper .modal-inner-wrapper{
+  max-width: 700px;
+  position: fixed;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  width:100%;
+  padding: 20px;
+  padding-bottom: 0;
+}
+.modal-wrapper .modal-inner-wrapper .modal-title-wrapper{
+  position: relative;
+  width: 100%;
+  border-bottom: 1px solid lightgrey;
+  padding-bottom: 20px;
+}
+.modal-wrapper .modal-inner-wrapper .modal-title-wrapper h2{
+  text-align: center;
+  margin-bottom: 0;
+}
+.modal-wrapper .modal-inner-wrapper .modal-title-wrapper .modal-close{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
+
+/* .modal-wrapper .modal-inner-wrapper .modal-title-wrapper .modal-close:before{
+  width: 100%;
+  height: 5px;
+  transform: rotate(45deg);
+  content:'-';
+  background-color: black;
+  display: block;  
+}
+.modal-wrapper .modal-inner-wrapper .modal-title-wrapper .modal-close:after{
+  width: 100%;
+  height: 5px;
+  transform: rotate(-45deg);
+  content:'-';
+  background-color: black;
+  display: block;
+} */
+
+.modal-wrapper .modal-inner-wrapper .modal-title-wrapper .modal-close:hover{
+  cursor: pointer;
+}
+.modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper .tab-title{
+  font-size: 18px;
+  color:#262626B2;
+  font-weight: 400;
+  margin:0;
+}
+.modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper .tab-title:hover{
+  cursor: pointer;
+}
+.modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper .tab-title.active{
+  color:#0F9453;
+}
+.individual-tab-content-wrapper{
+  display: none;
+}
+.individual-tab-content-wrapper.active{
+  display: block;
+}
+.individual-tab-content-wrapper .title-unit-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.individual-tab-content-wrapper .title-unit-wrapper p{
+  font-size: 24px;
+}
+.individual-tab-content-wrapper .title-unit-wrapper .unit-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.individual-tab-content-wrapper .title-unit-wrapper .unit-wrapper h3{
+  margin:0;
+  font-weight: 400;
+}
+.individual-tab-content-wrapper .title-unit-wrapper .unit-wrapper h3:first-child{
+  margin-right: 10px;
+}
+.individual-tab-content-wrapper .title-unit-wrapper .unit-wrapper h3:last-child{
+  margin-left: 10px;
+}
+
+
+
+
+
+.switch {
+	position: relative;
+	display: block;
+	vertical-align: top;
+	width: 60px;
+	height: 20px;
+	padding: 3px;
+	margin:0;
+	background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
+	background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);
+	border-radius: 18px;
+	box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	cursor: pointer;
+  box-sizing:content-box;
+}
+.switch-input {
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+  box-sizing:content-box;
+}
+.switch-label {
+	position: relative;
+	display: block;
+	height: inherit;
+	font-size: 10px;
+	text-transform: uppercase;
+	background: #eceeef;
+	border-radius: inherit;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
+  box-sizing:content-box;
+}
+.switch-input:checked ~ .switch-label {
+	background: #E1B42B;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
+}
+.switch-input:checked ~ .switch-label:before {
+	opacity: 0;
+}
+.switch-input:checked ~ .switch-label:after {
+	opacity: 1;
+}
+.switch-handle {
+	position: absolute;
+	top: 4px;
+	left: 4px;
+	width: 18px;
+	height: 18px;
+	/* background: linear-gradient(to bottom, #FFFFFF 40%, #f0f0f0);
+	background-image: -webkit-linear-gradient(top, #FFFFFF 40%, #f0f0f0); */
+	border-radius: 100%;
+	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+  background-color: #262626;
+}
+/* .switch-handle:before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -6px 0 0 -6px;
+	width: 12px;
+	height: 12px;
+	background: linear-gradient(to bottom, #eeeeee, #FFFFFF);
+	background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF);
+	border-radius: 6px;
+	box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
+} */
+.switch-input:checked ~ .switch-handle {
+	left: 37px;
+	box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+/* Switch Left Right
+==========================*/
+.switch-left-right .switch-label {
+	overflow: hidden;
+}
+.switch-left-right .switch-label:before, .switch-left-right .switch-label:after {
+	width: 20px;
+	height: 20px;
+	top: 4px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 11px 0 0 0;
+	text-indent: -12px;
+	border-radius: 20px;
+	box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2), inset 0 0 3px rgba(0, 0, 0, 0.1);
+}
+.switch-left-right .switch-label:before {
+	background: #eceeef;
+	text-align: left;
+	padding-left: 80px;
+}
+.switch-left-right .switch-label:after {
+	text-align: left;
+	text-indent: 9px;
+	background: #FF7F50;
+	left: -100px;
+	opacity: 1;
+	width: 100%;
+}
+.switch-left-right .switch-input:checked ~ .switch-label:before {
+	opacity: 1;
+	left: 100px;
+}
+.switch-left-right .switch-input:checked ~ .switch-label:after {
+	left: 0;
+}
+.switch-left-right .switch-input:checked ~ .switch-label {
+	background: inherit;
+}
+/* Switch Flat
+==========================*/
+.switch-flat {
+	padding: 0;
+	background: #FFF;
+	background-image: none;
+}
+.switch-flat .switch-label {
+	background: #FFF;
+	border: solid 2px #eceeef;
+	box-shadow: none;
+}
+.switch-flat .switch-label:after {
+	color: #0088cc;
+}
+.switch-flat .switch-handle {
+	top: 6px;
+	left: 6px;
+	background: #dadada;
+	width: 22px;
+	height: 22px;
+	box-shadow: none;
+}
+.switch-flat .switch-handle:before {
+	background: #eceeef;
+}
+.switch-flat .switch-input:checked ~ .switch-label {
+	background: #FFF;
+	border-color: #0088cc;
+}
+.switch-flat .switch-input:checked ~ .switch-handle {
+	left: 72px;
+	background: #0088cc;
+	box-shadow: none;
+}
+/* Switch Yes No
+==========================*/
+.switch-yes-no {
+	padding: 0;
+	margin: 15px 0 0;
+	background: #FFF;
+	border-radius: 0;
+	background-image: none;
+}
+.switch-yes-no .switch-label {
+	box-shadow: none;
+	background: none;
+}
+.switch-yes-no .switch-label:after, .switch-yes-no .switch-label:before {
+	width: 100%;
+	height: 70%;
+	top: 5px;
+	left: 0;
+	text-align: center;
+	padding-top: 10%;
+	box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2), inset 0 0 3px rgba(0, 0, 0, 0.1);
+}
+.switch-yes-no .switch-label:after {
+	color: #FFFFFF;
+	background: #32CD32;
+	backface-visibility: hidden;
+	transform: rotateY(180deg);
+}
+.switch-yes-no .switch-label:before {
+	background: #eceeef;
+	backface-visibility: hidden;
+}
+.switch-yes-no .switch-handle {
+	display: none;
+}
+.switch-yes-no .switch-input:checked ~ .switch-label {
+	background: #FFF;
+	border-color: #0088cc;
+}
+.switch-yes-no .switch-input:checked ~ .switch-label:before {
+	transform: rotateY(180deg)
+}
+.switch-yes-no .switch-input:checked ~ .switch-label:after {
+	transform: rotateY(0)
+}
+/* Switch Slide
+==========================*/
+.switch-slide {
+	padding: 0;
+	background: #FFF;
+	border-radius: 0;
+	background-image: none;
+}
+.switch-slide .switch-label {
+	box-shadow: none;
+	background: none;
+	overflow: hidden;
+}
+.switch-slide .switch-label:after, .switch-slide .switch-label:before {
+	width: 100%;
+	height: 65%;
+	top: 5px;
+	left: 0;
+	text-align: center;
+	padding-top: 10%;
+	box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2), inset 0 0 3px rgba(0, 0, 0, 0.1);
+}
+.switch-slide .switch-label:after {
+	color: #FFFFFF;
+	background: #87CEEB;
+	left: -100px;
+}
+.switch-slide .switch-label:before {
+	background: #eceeef;
+}
+.switch-slide .switch-handle {
+	display: none;
+}
+.switch-slide .switch-input:checked ~ .switch-label {
+	background: #FFF;
+	border-color: #0088cc;
+}
+.switch-slide .switch-input:checked ~ .switch-label:before {
+	left: 100px;
+}
+.switch-slide .switch-input:checked ~ .switch-label:after {
+	left: 0;
+}
+/* Switch Light
+==========================*/
+.switch-light {
+	padding: 0;
+	background: #FFF;
+	background-image: none;
+}
+.switch-light .switch-label {
+	background: #FFF;
+	border: solid 2px #eceeef;
+	box-shadow: none;
+}
+.switch-light .switch-label:after {
+	color: #9370DB;
+}
+.switch-light .switch-label:before {
+	right: inherit;
+	left: 11px;
+}
+.switch-light .switch-handle {
+	top: 6px;
+	left: 72px;
+	background: #dadada;
+	width: 22px;
+	height: 22px;
+	box-shadow: none;
+}
+.switch-light .switch-handle:before {
+	background: #eceeef;
+}
+.switch-light .switch-input:checked ~ .switch-label {
+	background: #FFF;
+	border-color: #9370DB;
+}
+.switch-light .switch-input:checked ~ .switch-handle {
+	left: 72px;
+	box-shadow: none;
+	background: #9370DB
+}
+.switch-light .switch-input:checked ~ .switch-handle:before {
+	background: rgba(255,255,255,0.7);
+}
+/* Transition
+============================================================ */
+.switch-label, .switch-handle {
+	transition: All 0.3s ease;
+	-webkit-transition: All 0.3s ease;
+	-moz-transition: All 0.3s ease;
+	-o-transition: All 0.3s ease;
+}
+
+
+
+/* table */
+.table td{
+  border: 1px solid lightgrey;
+  padding: 10px 5px !important;
+  color: black;
+}
+.inch-table, .centi-table{
+  display: none;
+}
+.inch-table.active, .centi-table.active{
+  display: block;
+}
+
+.modal-wrapper .bottom-wrapper{
+  margin: 0 -20px;
+  padding: 0 20px;
+  background-color: black;
+  color: white;
+  margin-top: 50px;
 }
