--- a/assets/theme.css
+++ b/assets/theme.css
@@ -18022,9 +18022,11 @@ article-list > div > div > h3 > a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 .individual-tab-content-wrapper .title-unit-wrapper p{
   font-size: 24px;
+  margin-bottom: 0;
 }
 .individual-tab-content-wrapper .title-unit-wrapper .unit-wrapper{
   display: flex;
@@ -18353,4 +18355,245 @@ article-list > div > div > h3 > a {
   background-color: black;
   color: white;
   margin-top: 50px;
+}
+.modal-wrapper .modal-product-wrapper{
+  /* margin:0 20px; */
+  margin: 0 10px;
+  /* padding: 0 20px; */
+}
+.modal-wrapper .modal-product-wrapper img{
+  width:100%;
+}
+.modal-wrapper .arrow-button{
+  position: absolute;
+  top: 50%;
+  z-index: 9;
+  transform: translateY(-50%);
+}
+.modal-wrapper .arrow-button:hover{
+  cursor: pointer;
+}
+.modal-wrapper .arrow-button.arrow-prev{
+  left:20px;
+}
+.modal-wrapper .arrow-button.arrow-next{
+  right:20px;
+}
+
+.tab2.individual-tab-content-wrapper .title-unit-wrapper{
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.tab2 .bottom-content-wrapper{
+  text-align: center;
+  margin-top: 30px;
+}
+.tab2 .bottom-content-wrapper p{
+  font-size: 18px;
+  color: #262626;
+  margin: 0;
+}
+.tab2 .bottom-content-wrapper p:last-child{
+  color: #262626B2;
+}
+
+
+
+
+.how-measure .content-wrapper{
+  display: flex;
+}
+.how-measure .content-wrapper .left-content-wrapper{
+  width: 60%;
+}
+.how-measure .content-wrapper .left-content-wrapper h5{
+  margin-bottom: 0;
+}
+.how-measure .content-wrapper .left-content-wrapper p{
+  margin-bottom: 30px !important;
+  margin-top: 0;
+}
+.how-measure .content-wrapper .right-content-wrapper{
+  width: 40%;
+}
+
+
+
+/* css for product zoom */
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: white;
+  transition: unset;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: black;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  z-index: 1000;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Hide the slides by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Caption text */
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+img.demo {
+  opacity: 0.6;
+}
+img.demo.active{
+  opacity: 1;
+  display: block;
+  visibility: visible;
+  z-index: 9999;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.mySlides img{
+  visibility: visible;
+}
+#myModal{
+  visibility: visible;
+  z-index: 999;
+  padding-top: 0;
+}
+#myModal .modal-content{
+  max-width: 70%;
+  margin: 0 auto;
+  height: 80vh;
+  background-color: transparent;
+  top: 50%;
+  transform: translateY(-50%);
+}
+#myModal .thumb-image{  
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  max-width: 50px;
+  transform: translateY(-50%);
+  z-index: 9999;
+}
+#myModal .thumb-image .column{
+  margin-bottom: 5px;
+  z-index: 9999;
+}
+#myModal .modal-inner-wrapper{
+  position:relative;
+  width: 100%;
+  height: 100%;
+}
+#myModal .prev, #myModal .next{
+  z-index: 1000;
+  border: 1px solid lightgrey;
+  color: rgb(var(--prev-next-button-color, var(--root-text-color)));
+  transition: color .2s ease-in-out;
+  pointer-events: auto;
+  overflow: hidden;
+}
+#myModal .prev{
+  left: 15%;
+}
+#myModal .next{
+  right: 15%;
+}
+#myModal .modal-content img{
+  height: 80vh;
+  width: auto;
+  margin: 0 auto;
+  display: block;
+}
+#myModal.active{
+  display: block;
 }
