--- a/assets/theme.css
+++ b/assets/theme.css
@@ -17936,7 +17936,7 @@ article-list > div > div > h3 > a {
 
 /* modal style */
 .modal-wrapper{
-  display: none;
+  /* display: none; */
   position: fixed;
   left: 0;
   right:0;
@@ -17945,13 +17945,18 @@ article-list > div > div > h3 > a {
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.5);
-  z-index: 99;
+  z-index: -1;
+  visibility: hidden;
+  opacity: 0;
 }
 .modal-wrapper.active{
-  display: block;
+  /* display: block; */
+  visibility: visible;
+  opacity: 1;
+  z-index: 99;
 }
 .modal-wrapper .modal-inner-wrapper{
-  max-width: 700px;
+  max-width: 600px;
   position: fixed;
   left: 50%;
   top:50%;
@@ -17960,6 +17965,32 @@ article-list > div > div > h3 > a {
   width:100%;
   padding: 20px;
   padding-bottom: 0;
+  max-height: 730px;
+  overflow-y: auto;
+}
+@media (max-width:480px){
+  .modal-wrapper .modal-inner-wrapper{
+    max-height: 600px;
+  }
+  .modal-wrapper .bottom-wrapper{
+    margin-top: 20px;
+  }
+  .modal-wrapper .individual-tab-content-wrapper .title-unit-wrapper p{
+    font-size: 20px;
+  }
+  .modal-wrapper .individual-tab-content-wrapper .title-unit-wrapper{
+    margin-bottom: 0;
+  }
+  .modal-wrapper .how-measure .content-wrapper{
+    flex-direction: column-reverse;
+  }
+  .modal-wrapper .how-measure .content-wrapper > div{
+    width: 100%;
+  }
+  .modal-wrapper .how-measure .content-wrapper > div img{
+    display: block;
+    width: 100%;
+  }
 }
 .modal-wrapper .modal-inner-wrapper .modal-title-wrapper{
   position: relative;
@@ -18009,11 +18040,18 @@ article-list > div > div > h3 > a {
   margin-top: 20px;
   margin-bottom: 30px;
 }
+.modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper .arrow-prev{
+  left: 0;
+}
+.modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper .arrow-next{
+  right: 0;
+}
 .modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper .tab-title{
   font-size: 18px;
   color:#262626B2;
   font-weight: 400;
   margin:0;
+  text-align: center;
 }
 .modal-wrapper .modal-inner-wrapper .tabs-wrapper .title-wrapper .tab-title:hover{
   cursor: pointer;
@@ -18052,7 +18090,13 @@ article-list > div > div > h3 > a {
 .individual-tab-content-wrapper .title-unit-wrapper .unit-wrapper h3:last-child{
   margin-left: 10px;
 }
-
+.individual-tab-content-wrapper .table-wrapper img{
+  display: block;
+  width: 100%;
+}
+.individual-tab-content-wrapper .table-wrapper .table{
+  width: max-content;
+}
 
 
 
@@ -18396,6 +18440,8 @@ article-list > div > div > h3 > a {
 .tab2 .bottom-content-wrapper{
   text-align: center;
   margin-top: 30px;
+  /* max-width: 60%;
+  margin: 0 auto; */
 }
 .tab2 .bottom-content-wrapper p{
   font-size: 18px;
@@ -18632,4 +18678,26 @@ img.hover-shadow {
   #myModal .thumb-image{
     display:none;
   }
+}
+
+
+
+.picture-recycle-img .icon-tooltip{
+  position: absolute;
+  right: 40px;
+  display: inline-block;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -120px;
+  opacity:0;
+  visibility: hidden;
+  width: 120px;
+  text-align: center;
+  background-color: white;
+  font-size: 12px;
+  font-weight: bold;
+}
+.picture-recycle-img.active .icon-tooltip{
+  opacity:1;
+  visibility: visible;
 }
